--- a/index.html
+++ b/index.html
@@ -6,12 +6,8 @@
     <title>Homework 11-promisification</title>
 </head>
 <body>
-    <h1>Main</h1>
-    <ul>
-        <li><a href="./js/task-1.js">Task-1</a></li>
-        <li><a href="./js/task-2.js">Task-2</a></li>
-        <li><a href="./js/task-3.js">Task-3</a></li>
-    </ul>
-    <script src="./index.js" type="module"></script>
+    <script type="module" src="./task-1.js"></script>
+    <script type="module" src="./task-2.js"></script>
+    <script type="module" src="./task-3.js"></script>
 </body> 
 </html>
